fix alignment

--- a/src/components/ActivityList/style.css
+++ b/src/components/ActivityList/style.css
@@ -1,6 +1,7 @@
 .ds-card {
   width: 15rem;
   border: 0 !important;
+  margin: auto;
 }
 
 .ds-card-title {
